// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testet die Hello Komponente mit Jest Snapshot 1`] = `
<label>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  Off
</label>
`;

exports[`Testet die Hello Komponente mit Jest Snapshot 2`] = `
<label>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  On
</label>
`;
